# spacewars-rust

./: .gitignore  Cargo.toml  README.md
game/: Cargo.toml
game/src/: enemy.rs  game_objects.rs  hero.rs  lib.rs  player.rs  shot.rs  spaceship.rs  stars.rs
opengl/: Cargo.toml  build.rs
opengl/src/: main.rs  presenter.rs
src/: game.rs  main.rs  presenter.rs  scene.rs
src/game/: enemy.rs  game_objects.rs  hero.rs  mod.rs  player.rs  shot.rs  space_objects.rs  spaceship.rs  stars.rs
src/opengl/: mod.rs  presenter.rs
wasm/: Cargo.toml  index.html  index.js  package-lock.json  package.json
wasm/src/: graphics.rs  lib.rs  presenter.rs
